# ChangeLog for gnome-base/gnome-extra-apps
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnome-base/gnome-extra-apps/ChangeLog,v 1.1 2011/11/07 07:49:02 tetromino Exp $

*gnome-extra-apps-3.2.1 (07 Nov 2011)

  07 Nov 2011; Alexandre Rostovtsev <tetromino@gentoo.org>
  +gnome-extra-apps-3.2.1.ebuild, +metadata.xml:
  Add the sub-meta package for additional gnome-3 applications from the gnome
  overlay.
