@@ -1,6 +1,6 @@
 DIST SDL_gfx-2.0.22.tar.gz 1670662 RMD160 96213169e126ea3d54e10d5b7339426df9d0cc61 SHA1 6d384d8dbf7fe56e4dfef1aaa06a106f62ef91d1 SHA256 1575e7be73fd927ff0e3567dc06095773f5ba1b47872b9aa0d0fefebfd6d2bf0
 DIST SDL_gfx-2.0.23.tar.gz 1707852 RMD160 e793cf8fea390561513e2e743e644abc11bb3f36 SHA1 aae60e7fed539f3f8a0a0bd6da3bbcf625642596 SHA256 41bd601d65bba19eeac80a62570ce120098414ece22de402a8ee81b10e07faea
 EBUILD sdl-gfx-2.0.22.ebuild 1147 RMD160 e76074bfe2b5add941be5bda1c83b53b022e1f0b SHA1 67c426e0b18db0718b543a49c23b3d0a888d5963 SHA256 90a91550acb3ad1eecc0794f7d47fe49a2b9e10fe255e3a47e7e36b5608ba84f
-EBUILD sdl-gfx-2.0.23.ebuild 1147 RMD160 45f04d22a6ae3ca973984b634d2dde5dcbf37582 SHA1 9f8418501359b718c5395f275754bc7f42aea24a SHA256 01e94b3cd4c1bf230aa189bebd0d6542fdf95865ef3f97b4e95d60d6def8ca52
+EBUILD sdl-gfx-2.0.23.ebuild 1143 RMD160 82d0bbfd16a81d469731f47f360f771c905590d8 SHA1 da1181403a7bee5607c5e478158c0131c4a7038f SHA256 14839428378deba0170796271ffadab3e7d8f006924c20cc4931301472931c48
 MISC ChangeLog 9341 RMD160 11ad155f50c7672dbe219beb82cfd75e0f8330b1 SHA1 a7c4d0725df5caf18f7006d738accc56f728cbc9 SHA256 2caeb582130da530c82a4e6d1161be1141c0bdfc53553bf0a4fad8673bf77263
 MISC metadata.xml 814 RMD160 7c27f9bb809a7e8ec09ffe500a34e787dc291398 SHA1 4f47376426cd837f96b6fee6f64fb45e98bc4131 SHA256 acfaa2ee674cddffcfa2bc9efad13e427caff8ad702b2ede75f77b8ea8910427
