@@ -1,6 +1,6 @@
 # Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/sdl-gfx/sdl-gfx-2.0.23.ebuild,v 1.1 2011/12/04 23:42:23 mr_bones_ Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/sdl-gfx/sdl-gfx-2.0.23.ebuild,v 1.2 2011/12/05 03:21:38 mr_bones_ Exp $
 
 EAPI=2
 inherit autotools multilib
@@ -10,7 +10,7 @@ DESCRIPTION="Graphics drawing primitives library for SDL"
 HOMEPAGE="http://www.ferzkopp.net/joomla/content/view/19/14/"
 SRC_URI="http://www.ferzkopp.net/Software/SDL_gfx-2.0/${MY_P}.tar.gz"
 
-LICENSE="LGPL-2.1"
+LICENSE="ZLIB"
 SLOT="0"
 KEYWORDS="~alpha ~amd64 ~hppa ~ia64 ~ppc ~ppc64 ~sparc ~x86 ~x86-fbsd ~x86-freebsd ~amd64-linux ~ia64-linux ~x86-linux ~ppc-macos ~x86-macos ~x86-solaris"
 IUSE="doc mmx static-libs"
