@@ -1,6 +1,10 @@
 # ChangeLog for gnome-base/gnome-extra-apps
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/gnome-extra-apps/ChangeLog,v 1.1 2011/11/07 07:49:02 tetromino Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/gnome-extra-apps/ChangeLog,v 1.2 2011/12/05 03:40:17 tetromino Exp $
+
+  05 Dec 2011; Alexandre Rostovtsev <tetromino@gentoo.org>
+  gnome-extra-apps-3.2.1.ebuild:
+  Drop bug-buddy dep (not useful with gnome-3).
 
 *gnome-extra-apps-3.2.1 (07 Nov 2011)
 
